[project]
name = "ad-diffusion-oss"
version = "1.0.0"
description = "Tesseract AD Diffusion Model introduces diffusion modeling, stabilized through curriculum learning, and pairs it with adaptive thresholding methods in a model purpose-built for anomaly detection."
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "torch>=2.7.0",
    "numpy>=1.21.0,<2",
    "pandas>=1.5.0,<3",
    "scikit-learn>=1.1.0,<2",
    "scipy>=1.9.0,<2",
    "pyyaml>=6.0,<7",
    "tqdm>=4.64.0,<5",
    "psutil>=5.8.0,<6",
    "huggingface_hub>=0.23.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0,<9",
    "ruff>=0.1.0,<1",
]

# Minimal Ruff configuration for code formatting
[tool.ruff]
line-length = 120
exclude = ["**/__pycache__/**", ".venv/**"]
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line too long (handled by line-length)

# Basic test configuration (for future use)
[tool.pytest.ini_options]
addopts = "--disable-warnings -v"
python_files = ["test*.py", "*_test.py"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*", "models*", "utils*"]
namespaces = true
