[project]
name = "tesseract_forecasting"
version = "0.1.0"
description = "Tesseract Forecasting Model that learns universal representations from diverse temporal data using self-supervised pretraining for forecasting"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasetsforecast>=1.0.0",
    "joblib>=1.5.2",
    "pandas>=2.1.0",
    "pytest-xdist>=3.8.0",
    "numpy>=1.24.0",
    "torch>=2.7.0",
    "tqdm>=4.65.0",
    "huggingface_hub>=0.17.0",
    "transformers>=4.36.0",
]

[tool.uv]

[[tool.uv.index]]
name = "PyPI"
url = "https://pypi.org/simple/"
default = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
include = [
    "**/*.py",
    "**/*.yaml",
    "**/*.yml",
    "README.md",
]
exclude = [
    "__pycache__/**",
    "forecasting/sdk/tests/**",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".DS_Store",
    "*.so",
    "*.egg-info",
]

[tool.hatch.build.targets.wheel]
include = [
    "**/*.py",
    "**/*.yaml",
    "**/*.yml",
]
exclude = [
    "__pycache__/**",
    "forecasting/sdk/tests/**",
    "*.pyc",
    "*.pyo",
    "*.pyd",
    ".DS_Store",
    "*.so",
    "*.egg-info",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 120
exclude = ["__pycache__/**"]
indent-width = 4

[tool.ruff.lint]
select = ["ALL"]
exclude = ["__pycache__/**"]
preview = true
explicit-preview-rules = true

# Inheriting the same ignore rules from the parent project
ignore = [
    "COM812", # missing-trailing-comma
    "ISC001", # single-line-implicit-string-concatenation
    "D", # doctests
    "S101", # assert
    "PLR2004", # magic
    "TRY003", # exception-messages
    "TRY301",
    "TID252", # prefer-absolute-imports

    "A001",
    "A002",
    "ANN001",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN204",
    "ANN205",
    "ANN206",
    "ANN401",
    "B006",
    "B007",
    "B008",
    "B023",
    "B028",
    "B904",
    "BLE001",
    "C408",
    "C414",
    "C901",
    "E501",
    "EM101",
    "EM102",
    "ERA001",
    "EXE001",
    "EXE003",
    "EXE005",
    "F841",
    "FA100",
    "FA102",
    "FBT001",
    "FBT002",
    "FBT003",
    "G004",
    "INP001",
    "ISC003",
    "N801",
    "N802",
    "N803",
    "N806",
    "N812",
    "N999",
    "NPY002",
    "PD002",
    "PD003",
    "PD008",
    "PD011",
    "PERF401",
    "PERF403",
    "PGH004",
    "PLR0124",
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR1704",
    "PLR1714",
    "PLW2901",
    "PT006",
    "PT018",
    "PTH100",
    "PTH102",
    "PTH103",
    "PTH110",
    "PTH113",
    "PTH118",
    "PTH119",
    "PTH120",
    "PTH123",
    "PTH207",
    "PTH208",
    "RUF003",
    "RUF012",
    "RUF017",
    "S301",
    "S311",
    "S324",
    "S506",
    "S603",
    "SIM102",
    "SIM105",
    "SIM108",
    "SIM110",
    "SIM113",
    "SIM115",
    "SIM117",
    "SIM118",
    "SIM401",
    "SLF001",
    "T201",
    "TRY002",
    "TRY201",
    "TRY300",
    "TRY400",
    "ARG001",
    "ARG002",
    "LOG015",
    "PLC0415",
    "RET503",
    "RET504",
    "RUF005",
    "UP006",
    "UP008",
    "UP035",
    "E402",
    "E722",
    "PD010",
    "W293",
    "SIM101",
    "TRY004",
    "RUF046",
    "RUF059",
    "ARG005",
    "RUF043",
    "PLR0911",
]

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true
